[package]
name = "core"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = "4.5.4"
thiserror = "1.0.58"
serde = { version = "1.0.209", features = ["derive"], optional = true }
toml = { version = "0.8.19", optional = true }
# dirs = { version = "5.0", optional = true }
dirs = { workspace = true, optional = true }
serde_json = { version = "1.0.133", optional = true }
memmap2 = { version = "0.9.5", optional = true }

[features]
default = []
sigrs_function = ["serde", "toml", "dirs", "serde_json", "memmap2"]

# Distributor, main binary user calls, executes sigrs_main /sigrs_modifier
[[bin]]
name = "sigrs"
path = "src/distributor_bin/main.rs"

# handles all sigrs functionality
[[bin]]
name = "sigrs_function"
path = "src/sigrs_bin/main.rs"
required-features = ["sigrs_function"]

# modifies sigrs_main binary to set config file path
[[bin]]
name = "sigrs_modifier"
path = "src/modifier_bin/main.rs"
